# raytracing-potato

./: .gitignore  Cargo.toml  README.md
assets/: earthmap.tga
src/: bvh.rs  camera.rs  example_scenes.rs  hittable.rs  image.rs  lib.rs  main.rs  material.rs  mesh.rs  randomness.rs  render.rs  texture.rs  utility.rs
