[package]
name = "raytracing2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
rand = "0.8.4"
indicatif = "0.16.2"
nom = "7.1.0"

[profile.release]
debug = true # Have debugging symbols for profiling